fix css for overflow song amounts

--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,7 @@ a.bi {
   bottom: 25%;
   width: 90%;
 }
+
+.results {
+  max-height: 500px;
+}
